--- a/ETL_Mini_Project_Starter_Code_Daniela_Alena_Persistence.ipynb
+++ b/ETL_Mini_Project_Starter_Code_Daniela_Alena_Persistence.ipynb
@@ -16,6 +16,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Daniela Trujillo --- START"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Extract the crowdfunding.xlsx Data"
    ]
   },
@@ -957,6 +964,41 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 9 entries, 0 to 8\n",
+      "Data columns (total 2 columns):\n",
+      " #   Column       Non-Null Count  Dtype \n",
+      "---  ------       --------------  ----- \n",
+      " 0   category_id  9 non-null      object\n",
+      " 1   category     9 non-null      object\n",
+      "dtypes: object(2)\n",
+      "memory usage: 272.0+ bytes\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 24 entries, 0 to 23\n",
+      "Data columns (total 2 columns):\n",
+      " #   Column          Non-Null Count  Dtype \n",
+      "---  ------          --------------  ----- \n",
+      " 0   subcategory_id  24 non-null     object\n",
+      " 1   subcategory     24 non-null     object\n",
+      "dtypes: object(2)\n",
+      "memory usage: 512.0+ bytes\n"
+     ]
+    }
+   ],
+   "source": [
+    "category_df.info()\n",
+    "subcategory_df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Export categories_df and subcategories_df as CSV files.\n",
@@ -969,14 +1011,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Why category.csv and subcategory.csv not in Resources folder?    "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### ALENA"
+    "### Daniela Trujillo --- FINISH\n",
+    "### Alena Matusevich --- START"
    ]
   },
   {
@@ -1008,7 +1044,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {
     "scrolled": true
    },
@@ -1188,7 +1224,7 @@
        "4      False           theater/plays     theater        plays  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1201,7 +1237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1241,7 +1277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1251,7 +1287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1261,7 +1297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1302,7 +1338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1465,12 +1501,12 @@
        "3  Vision-oriented fresh-thinking conglomeration    4200.0    2477.0   \n",
        "4                      Proactive foreground core    7600.0    5265.0   \n",
        "\n",
-       "      outcome  backers_count country currency launch_date    end_date  \\\n",
-       "0      failed              0      CA      CAD  2020-02-13  2021-03-01   \n",
-       "1  successful            158      US      USD  2021-01-25  2021-05-25   \n",
-       "2  successful           1425      AU      AUD  2020-12-17  2021-12-30   \n",
-       "3      failed             24      US      USD  2021-10-21  2022-01-17   \n",
-       "4      failed             53      US      USD  2020-12-21  2021-08-23   \n",
+       "      outcome  backers_count country currency launch_date   end_date  \\\n",
+       "0      failed              0      CA      CAD  2020-02-13 2021-03-01   \n",
+       "1  successful            158      US      USD  2021-01-25 2021-05-25   \n",
+       "2  successful           1425      AU      AUD  2020-12-17 2021-12-30   \n",
+       "3      failed             24      US      USD  2021-10-21 2022-01-17   \n",
+       "4      failed             53      US      USD  2020-12-21 2021-08-23   \n",
        "\n",
        "   staff_pick  spotlight category & sub-category    category  subcategory  \n",
        "0       False      False        food/food trucks        food  food trucks  \n",
@@ -1480,7 +1516,7 @@
        "4       False      False           theater/plays     theater        plays  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1490,12 +1526,54 @@
     "from datetime import datetime as dt\n",
     "campaign_df[\"launch_date\"]  = pd.to_datetime(campaign_df[\"launch_date\"], utc=True, unit='s').dt.strftime('%Y-%m-%d')\n",
     "campaign_df[\"end_date\"]  = pd.to_datetime(campaign_df[\"end_date\"], utc=True, unit='s').dt.strftime('%Y-%m-%d')\n",
+    "campaign_df[\"launch_date\"] = pd.to_datetime(campaign_df[\"launch_date\"])\n",
+    "campaign_df[\"end_date\"] = pd.to_datetime(campaign_df[\"end_date\"])\n",
     "campaign_df.head(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1000 entries, 0 to 999\n",
+      "Data columns (total 17 columns):\n",
+      " #   Column                   Non-Null Count  Dtype         \n",
+      "---  ------                   --------------  -----         \n",
+      " 0   cf_id                    1000 non-null   int64         \n",
+      " 1   contact_id               1000 non-null   int64         \n",
+      " 2   company_name             1000 non-null   object        \n",
+      " 3   description              1000 non-null   object        \n",
+      " 4   goal                     1000 non-null   float64       \n",
+      " 5   pledged                  1000 non-null   float64       \n",
+      " 6   outcome                  1000 non-null   object        \n",
+      " 7   backers_count            1000 non-null   int64         \n",
+      " 8   country                  1000 non-null   object        \n",
+      " 9   currency                 1000 non-null   object        \n",
+      " 10  launch_date              1000 non-null   datetime64[ns]\n",
+      " 11  end_date                 1000 non-null   datetime64[ns]\n",
+      " 12  staff_pick               1000 non-null   bool          \n",
+      " 13  spotlight                1000 non-null   bool          \n",
+      " 14  category & sub-category  1000 non-null   object        \n",
+      " 15  category                 1000 non-null   object        \n",
+      " 16  subcategory              1000 non-null   object        \n",
+      "dtypes: bool(2), datetime64[ns](2), float64(2), int64(3), object(8)\n",
+      "memory usage: 119.3+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "campaign_df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {
     "scrolled": false
    },
@@ -1792,17 +1870,17 @@
        "998  Decentralized bandwidth-monitored ability    6900.0  12155.0  successful   \n",
        "999           Right-sized web-enabled intranet    9700.0  11929.0  successful   \n",
        "\n",
-       "     backers_count country currency launch_date    end_date  staff_pick  \\\n",
-       "990             57      CA      CAD  2021-12-29  2022-01-16       False   \n",
-       "991             52      US      USD  2020-07-07  2021-07-27       False   \n",
-       "992            263      AU      AUD  2020-12-20  2021-01-31       False   \n",
-       "993           1691      US      USD  2021-04-08  2021-12-18        True   \n",
-       "994            114      IT      EUR  2021-07-23  2021-11-25       False   \n",
-       "995             75      IT      EUR  2021-07-03  2021-07-08       False   \n",
-       "996            144      US      USD  2020-11-28  2021-02-28       False   \n",
-       "997            300      US      USD  2021-01-04  2021-10-04       False   \n",
-       "998            419      US      USD  2021-01-25  2021-04-18       False   \n",
-       "999            331      US      USD  2022-02-01  2022-02-16       False   \n",
+       "     backers_count country currency launch_date   end_date  staff_pick  \\\n",
+       "990             57      CA      CAD  2021-12-29 2022-01-16       False   \n",
+       "991             52      US      USD  2020-07-07 2021-07-27       False   \n",
+       "992            263      AU      AUD  2020-12-20 2021-01-31       False   \n",
+       "993           1691      US      USD  2021-04-08 2021-12-18        True   \n",
+       "994            114      IT      EUR  2021-07-23 2021-11-25       False   \n",
+       "995             75      IT      EUR  2021-07-03 2021-07-08       False   \n",
+       "996            144      US      USD  2020-11-28 2021-02-28       False   \n",
+       "997            300      US      USD  2021-01-04 2021-10-04       False   \n",
+       "998            419      US      USD  2021-01-25 2021-04-18       False   \n",
+       "999            331      US      USD  2022-02-01 2022-02-16       False   \n",
        "\n",
        "     spotlight        category & sub-category     category        subcategory  \\\n",
        "990      False  photography/photography books  photography  photography books   \n",
@@ -1829,7 +1907,7 @@
        "999        cat9       subcat24  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1844,7 +1922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1989,12 +2067,12 @@
        "3  Cross-platform solution-oriented process improvement  142400.0  21307.0   \n",
        "4                          User-friendly tertiary array    3300.0  12437.0   \n",
        "\n",
-       "      outcome  backers_count country currency launch_date    end_date  \\\n",
-       "0      failed              0      CA      CAD  2020-02-13  2021-03-01   \n",
-       "1  successful            222      US      USD  2020-06-20  2021-01-30   \n",
-       "2  successful            113      US      USD  2020-11-29  2021-06-11   \n",
-       "3      failed            296      US      USD  2020-05-05  2021-05-30   \n",
-       "4  successful            131      US      USD  2021-01-29  2021-02-13   \n",
+       "      outcome  backers_count country currency launch_date   end_date  \\\n",
+       "0      failed              0      CA      CAD  2020-02-13 2021-03-01   \n",
+       "1  successful            222      US      USD  2020-06-20 2021-01-30   \n",
+       "2  successful            113      US      USD  2020-11-29 2021-06-11   \n",
+       "3      failed            296      US      USD  2020-05-05 2021-05-30   \n",
+       "4  successful            131      US      USD  2021-01-29 2021-02-13   \n",
        "\n",
        "  category_id subcategory_id  \n",
        "0        cat1        subcat1  \n",
@@ -2004,7 +2082,7 @@
        "4        cat1        subcat1  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2017,12 +2095,57 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1000 entries, 0 to 999\n",
+      "Data columns (total 14 columns):\n",
+      " #   Column          Non-Null Count  Dtype         \n",
+      "---  ------          --------------  -----         \n",
+      " 0   cf_id           1000 non-null   int64         \n",
+      " 1   contact_id      1000 non-null   int64         \n",
+      " 2   company_name    1000 non-null   object        \n",
+      " 3   description     1000 non-null   object        \n",
+      " 4   goal            1000 non-null   float64       \n",
+      " 5   pledged         1000 non-null   float64       \n",
+      " 6   outcome         1000 non-null   object        \n",
+      " 7   backers_count   1000 non-null   int64         \n",
+      " 8   country         1000 non-null   object        \n",
+      " 9   currency        1000 non-null   object        \n",
+      " 10  launch_date     1000 non-null   datetime64[ns]\n",
+      " 11  end_date        1000 non-null   datetime64[ns]\n",
+      " 12  category_id     1000 non-null   object        \n",
+      " 13  subcategory_id  1000 non-null   object        \n",
+      "dtypes: datetime64[ns](2), float64(2), int64(3), object(7)\n",
+      "memory usage: 109.5+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "campaign_cleaned.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Export the DataFrame as a CSV file. \n",
     "campaign_cleaned.to_csv(\"Resources/campaign.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Alena Matusevich --- FINISH\n",
+    "### Persistence Musiiwa --- START"
    ]
   },
   {
@@ -2104,13 +2227,6 @@
     "# Read the data into a Pandas DataFrame. Use the `header=2` parameter when reading in the data.\n",
     "contact_info_df = pd.read_excel('Resources/contacts.xlsx', header=2)\n",
     "contact_info_df.head()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### PERSI  "
    ]
   },
   {
@@ -2590,29 +2706,10 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### DANIELA"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'contact_info_df' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[48], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m contact_info_df_copy \u001b[38;5;241m=\u001b[39m contact_info_df\u001b[38;5;241m.\u001b[39mcopy()\n\u001b[0;32m      2\u001b[0m contact_info_df_copy\u001b[38;5;241m.\u001b[39mhead()\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'contact_info_df' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "contact_info_df_copy = contact_info_df.copy()\n",
     "contact_info_df_copy.head()"
@@ -3446,11 +3543,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Persistence Musiiwa --- FINISH"
+   ]
   }
  ],
  "metadata": {
